fixed footer spacing issue on mobile.

--- a/scss/game.scss
+++ b/scss/game.scss
@@ -193,7 +193,7 @@ html {
     border-top: 2px solid $text-white;
     width: 100%;
     padding: 8px;
-    height: 24vh;
+    height: 28vh;
     text-align: center;
 
     p {
@@ -215,7 +215,7 @@ html {
     }
 
     div {
-      margin: 16px 0px;
+      margin: 24px 0px;
 
       a {
         margin: 0px 16px;
